<resources>
    <string name="app_name">Furia Pinolera</string>
    <string name="tab_ui_collection">BASIC UI</string>
    <string name="tab_features">FEATURES</string>
    <string name="tab_application">APPS</string>
    <string name="tab_feature_request">Feature Request</string>
    <string name="tab_about_us">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="dummy_text1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur ligula et eros pulvinar viverra. Morbi eu orci nulla. Duis porttitor mauris quis diam imperdiet, a porta diam sagittis. Suspendisse rutrum accumsan lectus et vestibulum. Donec vel est erat. Donec id sollicitudin quam, ut sollicitudin velit. Nulla at libero vitae urna fringilla porttitor sit amet vitae ligula. Duis ac mattis purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi congue, nisl eget tincidunt commodo, purus lacus dignissim massa, eu maximus ex ex sed lectus. Mauris dapibus enim ac ex tempor lobortis. Pellentesque at dolor nec dolor bibendum consectetur non ut libero.
    </string>
    <string name="dummy_text_title">
        Lorem ipsum dolor sit amet.
    </string>
    <string name="dummy_medium_text">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="dummy_small_text">
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="adview_banner_home_footer">ca-app-pub-8907881762519005/7085413600</string>
    <string name="adview_interstitial_ad_key">ca-app-pub-8907881762519005/6461954859</string>
    <string name="NameGrupo">Furia Pinolera</string>
    <string name="Registro">Registrarse</string>
    <string name="correo">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="olvidastepass">¿Olvidaste tu contraseña?</string>
    <string name="nuevoUsuario">¿Eres Nuevo?</string>
    <string name="nuevaCuenta">Crear una cuenta</string>
    <string name="registro_de_usuario">REGISTRO</string>
    <string name="tu_correo_electronico">Correo Electronico</string>
    <string name="ingrese_su_contrase_a">Contraseña</string>
    <string name="entrarUser">Entrar</string>
    <string name="tituloAceptar">Aceptar</string>
    <string name="RegistroCorrecto">Registro Correcto</string>
    <string name="RegistroError">Registro Incorrecto</string>
    <string name="SesionError">Error Al Iniciar Sesion</string>
    <string name="RegistradoCorrectamente">Te has registrado correctamente. Verifica tu correo Electronico</string>
    <string name="RegistradoError">Error inesperado al registrarse</string>
    <string name="msjErrorSesion">Error inesperado al iniciar sesion</string>
    <string name="errorCorreoVacio">Se debe ingresar un correo electronico</string>
    <string name="errorPassVacio">Falta ingresar la contraseña</string>
    <string name="esperePorFavor">Espere por favor...</string>
    <string name="Registrandowait">Se esta registrando</string>
    <string name="entrandoApp">Entrando ala aplicacion</string>
    <string name="passrepetir">Repetir contraseña</string>
    <string name="correoNovalido">El correo electronico no es valido</string>
    <string name="passDistintas">Las contraseña son distintas</string>
    <string name="passrepetirvacio">Debes repetir la contraseña</string>
    <string name="passNocumple">La contraseña no cumple los requisitos minimos</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="correoVinculado">¿Ingresa el correo electronico vinculado a tu cuenta?</string>
    <string name="msjRestauranPass">Revice su correo electronico y siga el enlace enviado</string>
    <string name="EnviadoOk">Enviado Correctamente</string>
    <string name="EnviandoSoli">Enviando Solicitud</string>

    <string name="fragment_first_title">First</string>
    <string name="fragment_second_title">Second</string>
    <string name="fragment_third_title">Third</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
