<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bgImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/baseline_image_black_24"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/view58"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/black_alpha_50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView183" />

                <View
                    android:id="@+id/view59"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/correoLogin" />

                <View
                    android:id="@+id/view57"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/black_alpha_50"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/entrarUser"
                    android:textSize="@dimen/font_title_size"
                    android:theme="@style/PSButton.Black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view58" />

                <Button
                    android:id="@+id/forgotButton"
                    style="@style/PSButton.Default.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/olvidastepass"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <EditText
                    android:id="@+id/correoLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/correo"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view58"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/passCorreo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintBottom_toBottomOf="@+id/view58"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view59"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/textView179"
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="80sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/logo_oficial"
                    tools:layout_editor_absoluteY="16dp"
                    tools:ignore="ContentDescription,MissingConstraints" />

                <TextView
                    android:id="@+id/textView183"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/NameGrupo"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/font_h5_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView179" />

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/black_alpha_50"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotButton"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:id="@+id/facebookLinearLayout"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/facebook"
                            android:tint="@color/md_white_1000"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/twitterLinearLayout"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:src="@drawable/twitter"
                            android:tint="@color/md_white_1000"
                            tools:ignore="ContentDescription" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/googlePlusLinearLayout"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/google_plus"
                            android:tint="@color/md_white_1000"
                            tools:ignore="ContentDescription" />


                    </LinearLayout>


                </LinearLayout>


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout32"
                    android:layout_width="395dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
                    tools:layout_editor_absoluteX="8dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textView188"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/nuevoUsuario"
                        android:textAlignment="viewStart"
                        android:textColor="@color/md_grey_300"
                        android:textSize="@dimen/font_body_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/nuevoUsuario"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nuevoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/nuevaCuenta"
                        android:textAlignment="viewStart"
                        android:textColor="@color/md_amber_100"
                        android:textSize="@dimen/font_title_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView188"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
