<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bgImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@drawable/baseline_image_black_24" />

                <View
                    android:id="@+id/view58"
                    android:layout_width="0dp"
                    android:layout_height="159dp"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/black_alpha_50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView183" />

                <View
                    android:id="@+id/view59"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/correoNewUser" />

                <View
                    android:id="@+id/view57"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/black_alpha_50"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/passNewUser2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/passrepetir"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintBottom_toBottomOf="@+id/view58"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="Autofill" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passNewUser" />

                <Button
                    android:id="@+id/registroBoton"
                    android:layout_width="338dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:onClick="registrarUsuario"
                    android:text="@string/Registro"
                    android:textSize="@dimen/font_title_size"
                    android:theme="@style/PSButton.Black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view58"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/correoNewUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/tu_correo_electronico"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view58"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/passNewUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/ingrese_su_contrase_a"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintBottom_toBottomOf="@+id/view58"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view59"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/textView179"
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="80sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/logo_oficial"
                    tools:ignore="ContentDescription,MissingConstraints"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/textView183"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/registro_de_usuario"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/font_h5_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView179" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
